conteudo/10_modulo/10_01_01-nodejs/k8s-manifests/istio/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: app-node-destination
spec:
  host: app-node-svc
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
